# Velib-Forecasting

./: .gitignore  .pre-commit-config.yaml  DockerFile-airflow  LICENSE  Makefile  README.md  airflow-deployment.yaml  airflow-service.yaml  cloudbuild.yaml  pyproject.toml  requirements.txt  setup.py  test_unnitest.py  velib-forecasting-auth.json  velib_forecasting_conda_environment.yaml
.circleci/: config.yml
.github/workflows/: dbt_test_reccurent.yml  sync_dag_to_composer.yml
airflow-deploy/: DockerFile-airflow  airflow-deployment.yaml  mysql-service.yaml
airflow-docker/: DockerFile-airflow  airflow-service.yaml  init_script.sh  mysql-deployment.yaml
configs/: grid_search.json  main.yml  meteo_api.yml  velib_api.yml
velib_forecasting/: utils.py
velib_forecasting/ETL/: airflow_dag.py
velib_forecasting/ETL/dags/: airflow_dag.py
velib_forecasting/ETL/extract/: meteo_extract.py  velib_extract.py
velib_forecasting/ETL/load/: load_meteo.py  load_velib.py
velib_forecasting/ETL/transform/: transform_meteo.py  (+1 more)
velib_forecasting/configs/: confs.py
velib_forecasting/kubeflow_deployment/: Dockerfile-kubeflow  kubeflow_pipeline.py  requirements.txt  velib_model_pipeline.json  velib_model_pipeline.yaml
velib_forecasting/mlflow_deployment/: DockerFile-mlflow  Dockerfile-mlflow-server  deployment.yaml  mlflow-server-deployment.yaml  mlflow-server-service.yaml  mlflow_pipeline.py  requirements.txt
velib_forecasting/model/: prophet_forecast.py  utils.py
velib_forecasting_dbt/: .user.yml  dbt_project.yml  profiles.yml  velib-forecasting-auth.json
(+8 files in other folders)
