[tool.poetry]
name = "velib-forecasting"
version = "0.1.0"
description = "Package for the Velib forecasting project"
authors = ["HippolyteGuigon <hippolyte.guigon@polytechnique.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
